--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ a {
 /* Navbar Start */
 .navbar {
   background-color: var(--color-white);
-  /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
 }
 
 .navbar .navbar-brand {
@@ -81,10 +80,10 @@ a {
 }
 
 .carousel-dark .carousel-indicators [data-bs-target] {
-  width: 15px;
-  height: 10px;
+  width: 16px;
+  height: 12px;
   border: 0;
-  border-radius: 15px;
+  border-radius: 20px;
   transition: 0.3s all;
   background: #cecece;
 }
@@ -152,3 +151,56 @@ a {
   margin-top: 3rem;
 }
 /* Product End */
+
+/* Category Start*/
+
+.category {
+  margin-top: 10rem;
+}
+
+.category h2 {
+  font-family: inherit;
+  font-size: 3.5rem;
+}
+
+.category hr {
+  position: relative;
+  width: 135px;
+  height: 10px;
+  margin: 0 auto;
+  border: none;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 156, 53, 1) 0%,
+    rgba(255, 208, 25, 1) 100%
+  );
+  opacity: 1;
+  border-radius: 10px;
+  margin-top: 1rem;
+}
+
+.category .card {
+  margin: 2rem;
+  padding: 5rem;
+  border: none;
+  border-radius: 0 30px 0 30px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.category .card__double {
+  margin-bottom: 5rem;
+}
+.category .card .card-title {
+  font-family: inherit;
+  font-size: 2.4rem;
+}
+.category .card__single {
+  align-items: center;
+  justify-content: center;
+  transform: translateY(50%);
+}
+
+.category .card__promo {
+  width: 100%;
+  transform: translateY(30%);
+}
+/* Category End*/
